Finished Basic Word Usage and nos.nl Article Comparison and created correct Corpus, TF and TF-IDF

--- a/src/analyses/nos.nl Articles Comparison.ipynb
+++ b/src/analyses/nos.nl Articles Comparison.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 43,
    "id": "09297e52",
    "metadata": {},
    "outputs": [],
@@ -19,9 +19,11 @@
     "sys.path.append('..')\n",
     "\n",
     "from itertools import chain\n",
+    "import math\n",
     "\n",
     "from util.nos_articles import *\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
     "import spacy\n",
     "# nlp = spacy.load(\"nl_core_news_sm\")\n",
@@ -50,11 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 39,
    "id": "c498afc3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Only run if you want to download new articles\n",
     "# download_articles(dates=dates, max_articles=5000, refresh_articles=False)"
    ]
   },
@@ -88,16 +91,7 @@
     }
    ],
    "source": [
-    "articles_dict = load_nos_texts(dates=dates)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efd04e05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "articles_dict = load_nos_texts(dates=dates)\n",
     "# articles_dict['2020-04-01']"
    ]
   },
@@ -111,54 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "id": "556fc16c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4990\n",
-      "De biograaf van de Britse prins Harry heeft in een artikel in modemagazine Tatler hard uitgehaald naar Harry en zijn vrouw Meghan, die sinds gisteren geen volwaardige leden van het Britse koningshuis meer zijn.\n",
-      " Schrijfster Angela Levin, die voor haar boek een jaar mocht optrekken met Harry, leerde de prins in 2017 kennen als een charismatische en grappige man.\n",
-      " Drie jaar later ziet ze \"een enorme verandering in zijn doen en laten\". Volgens Levin zijn Harry en Meghan \"toenemend egoïstisch\", doelend op het besluit van het paar een stap terug te doen in het Britse koningshuis en te verhuizen naar Noord-Amerika. \"Harry is bitter geworden en komt continu gestresst over\", aldus Levin.\n",
-      " Volgens haar had de Harry die ze zo goed leerde kennen nooit zijn familie de rug toegekeerd. En al helemaal niet temidden van \"een nationale crisis\", schrijft ze, refererend aan de coronacrisis en het gegeven dat Harry's vader kroonprins Charles besmet is met het virus. Ze herkent de prins naar eigen zeggen \"nog amper\", volgens Levin omdat hij door zijn vrouw in de spotlights staat die hij juist zo verafschuwt.\n",
-      " Harry en Meghan bedankten gisteren op hun laatste dag als fulltime royals op Instagram hun volgers voor de steun. \"Ook al zien jullie ons hier niet meer, het werk gaat door\", schreef het stel.\n",
-      "501\n",
-      "11457534\n",
-      "22915\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "501"
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_articles = list(chain(*articles_dict.values()))\n",
     "list_of_articles = [' '.join(x) for x in list_of_articles]\n",
-    "print(len(list_of_articles))\n",
-    "print(list_of_articles[1])\n",
     "\n",
-    "print(len(chunks))\n",
-    "list_of_text = [item for sublist in list_of_articles for item in sublist]\n",
-    "print(len(list_of_text))\n",
-    "chunk_size =  int(len(list_of_text)/500)\n",
-    "print(chunk_size)\n",
-    "chunks = [list_of_text[x:x+chunk_size] for x in range(0, len(list_of_text), chunk_size)]\n",
-    "#chunks[1]\n",
-    "string_chunks = [' '.join(x) for x in chunks]\n",
-    "#len(list_of_text)\n",
-    "#stringed_text = ' '.join(list_of_text)\n",
-    "#stringed_text[:500]\n",
-    "len(string_chunks)"
+    "# list_of_text = [item for sublist in list_of_articles for item in sublist]\n",
+    "# print(len(list_of_text))\n",
+    "# chunk_size =  int(len(list_of_text)/500)\n",
+    "# print(chunk_size)\n",
+    "# chunks = [list_of_text[x:x+chunk_size] for x in range(0, len(list_of_text), chunk_size)]\n",
+    "# chunks[1]\n",
+    "# string_chunks = [' '.join(x) for x in chunks]\n",
+    "# len(list_of_text)\n",
+    "# stringed_text = ' '.join(list_of_text)\n",
+    "# stringed_text[:500]\n",
+    "# len(string_chunks)"
    ]
   },
   {
@@ -192,18 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 191,
-   "id": "ad914276",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TF_IDF_CSV_PATH = '../output/NOS_tf_idf.csv'\n",
-    "TF_CSV_PATH = '../output/NOS_tf.csv'\n",
-    "CORPUS_PATH = '../output/NOS_corpus_5000_articles_without_stopwords.csv'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "727cfb3e",
    "metadata": {},
@@ -213,7 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 47,
+   "id": "ad914276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CORPUS_PATH = '../output/NOS_corpus_5000_articles_without_stopwords.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "id": "63effe9e",
    "metadata": {},
    "outputs": [],
@@ -245,6 +208,7 @@
     "    corpus['nos'] = wordlist\n",
     "    corpus.set_index('word', inplace=True)\n",
     "    corpus.fillna(0, inplace=True)\n",
+    "    corpus.sort_values(by='nos', ascending=False, inplace=True)\n",
     "    \n",
     "    if save:\n",
     "        corpus.to_csv(CORPUS_PATH)\n",
@@ -254,108 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "d4cf627c",
+   "execution_count": 184,
+   "id": "c7ee1cfc",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Daarom',\n",
-       " 'zijn',\n",
-       " 'scholen',\n",
-       " 'gewoon',\n",
-       " 'open,',\n",
-       " 'zodat',\n",
-       " 'ouders',\n",
-       " 'van',\n",
-       " 'kinderen',\n",
-       " 'met',\n",
-       " 'cruciale',\n",
-       " 'beroepen',\n",
-       " 'kunnen',\n",
-       " 'blijven',\n",
-       " 'werken.',\n",
-       " 'Ook',\n",
-       " 'is',\n",
-       " 'er',\n",
-       " 'volgens',\n",
-       " 'de',\n",
-       " 'Zweedse',\n",
-       " 'wetenschappers',\n",
-       " 'onvoldoende',\n",
-       " 'bewijs',\n",
-       " 'dat',\n",
-       " 'het',\n",
-       " 'coronavirus',\n",
-       " 'zich',\n",
-       " 'sneller',\n",
-       " 'via',\n",
-       " 'kinderen',\n",
-       " 'op',\n",
-       " 'scholen',\n",
-       " 'verspreidt.\\n',\n",
-       " 'Alleen',\n",
-       " 'voor',\n",
-       " 'ouderen',\n",
-       " 'gelden',\n",
-       " 'er',\n",
-       " 'voorlopig',\n",
-       " 'extra',\n",
-       " 'maatregelen.',\n",
-       " 'Zo',\n",
-       " 'worden',\n",
-       " 'mensen',\n",
-       " 'boven',\n",
-       " 'de',\n",
-       " '70',\n",
-       " 'aangeraden',\n",
-       " 'om',\n",
-       " 'binnen',\n",
-       " 'te',\n",
-       " 'blijven',\n",
-       " 'en',\n",
-       " 'is',\n",
-       " 'ook',\n",
-       " 'in',\n",
-       " 'Zweedse',\n",
-       " 'verpleeghuizen',\n",
-       " 'voorlopig',\n",
-       " 'geen',\n",
-       " 'bezoek',\n",
-       " 'toegestaan.\\n',\n",
-       " 'Dat',\n",
-       " 'er',\n",
-       " 'maar',\n",
-       " 'weinig',\n",
-       " 'onrust',\n",
-       " 'is',\n",
-       " 'in',\n",
-       " 'Zweden',\n",
-       " 'over',\n",
-       " 'het',\n",
-       " 'losse',\n",
-       " 'coronabeleid',\n",
-       " 'komt',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string_chunks[1][:500].split(' ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
-   "id": "c7ee1cfc",
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -495,151 +362,26 @@
    ],
    "source": [
     "# string_chunks[1][:5000].split(' ')\n",
-    "%time\n",
     "corpus = create_corpus(list_of_articles, save=False)\n",
-    "corpus"
+    "%time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 50,
    "id": "f8047ebd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nos</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>word</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>gaan</th>\n",
-       "      <td>8382</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zeggen</th>\n",
-       "      <td>8039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>komen</th>\n",
-       "      <td>7166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mens</th>\n",
-       "      <td>6885</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jaar</th>\n",
-       "      <td>5897</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>politiekleding</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>barak</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>kerkstraat</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>testkit</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>jeugdig</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>53323 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 nos\n",
-       "word                \n",
-       "gaan            8382\n",
-       "zeggen          8039\n",
-       "komen           7166\n",
-       "mens            6885\n",
-       "jaar            5897\n",
-       "...              ...\n",
-       "politiekleding     1\n",
-       "barak              1\n",
-       "kerkstraat         1\n",
-       "testkit            1\n",
-       "jeugdig            1\n",
-       "\n",
-       "[53323 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Document has 855629 words, with 53323 unique values.\n"
+     ]
     }
    ],
    "source": [
-    "corpus.sort_values(by='nos', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "id": "1d4032f3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "855629"
-      ]
-     },
-     "execution_count": 190,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "corpus['nos'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "id": "d044dcee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus.to_csv(CORPUS_PATH)"
+    "print(f\"Document has {corpus['nos'].sum()} words, with {corpus['nos'].count()} unique values.\")"
    ]
   },
   {
@@ -652,46 +394,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
+   "id": "0f9caf2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TF_IDF_CSV_PATH = '../output/NOS_tf_idf_5000_articles_without_stopwords.csv'\n",
+    "TF_CSV_PATH = '../output/NOS_tf_5000_articles_without_stopwords.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0d4478f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = pd.read_csv('../output/NOS_corpus_5000_articles_without_stopwords.csv')\n",
+    "corpus.set_index('word', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "id": "edba9a91",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_tfidf(corpus, include_idf=True):\n",
+    "def calculate_tfidf(corpus, specified_path, include_idf=False, save=False):\n",
     "    # Create Dataframe with Relative Word Frequencies\n",
     "    tf_idf = {k: [] for k in corpus.columns}\n",
     "    for index, row in tqdm(corpus.iterrows(), total=len(corpus)):\n",
     "        docs_with = np.count_nonzero(row)\n",
     "\n",
     "        for colname, count in row.items():\n",
+    "            \n",
     "            total_uniques = np.count_nonzero(corpus[colname])\n",
     "            tf = count / total_uniques\n",
-    "            result = tf\n",
+    "\n",
     "            if include_idf:\n",
     "                idf = math.log(len(corpus.columns) / docs_with)\n",
-    "                result *= idf\n",
+    "                tf *= idf\n",
     "\n",
-    "            tf_idf[colname].append(result)\n",
+    "            tf_idf[colname].append(tf)\n",
     "\n",
     "    tf_idf_df = pd.DataFrame.from_dict(tf_idf)\n",
     "    tf_idf_df.set_index(corpus.index, inplace=True)\n",
-    "\n",
-    "    if include_idf:\n",
-    "        tf_idf_df.to_csv(TF_IDF_CSV_PATH)\n",
-    "        print(f\"Saved results to 'output/corpus.csv and '{TF_IDF_CSV_PATH}'\")\n",
-    "    else:\n",
-    "        tf_idf_df.to_csv(TF_CSV_PATH)\n",
-    "        print(f\"Saved results to 'output/corpus.csv' and '{TF_CSV_PATH}'\")"
+    "    tf_idf_df.sort_values(by='nos', ascending=False, inplace=True)\n",
+    "    \n",
+    "    if save:\n",
+    "        if include_idf:\n",
+    "            tf_idf_df.to_csv(TF_IDF_CSV_PATH)\n",
+    "            print(f\"Saved TF-IDF DataFrame to '{specified_path}'\")\n",
+    "        else:\n",
+    "            tf_idf_df.to_csv(TF_CSV_PATH)\n",
+    "            print(f\"Saved TF DataFrame to '{specified_path}'\")\n",
+    "            \n",
+    "    return tf_idf_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "02e50d2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "786d39e82a704e969f7496f4147fe37e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/53323 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved TF DataFrame to '../output/NOS_tf_5000_articles_without_stopwords.csv'\n"
+     ]
+    }
+   ],
    "source": [
-    "calculate_tfidf(full_text=stringified_text, include_idf=True):"
+    "tf_df = calculate_tfidf(corpus=corpus, include_idf=False, specified_path=TF_CSV_PATH, save=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5409c713",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2e2f569fbd947d4bb7f25b0604d407c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/53323 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved TF-IDF DataFrame to '../output/NOS_tf_idf_5000_articles_without_stopwords.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf_idf_df = calculate_tfidf(corpus=corpus, include_idf=True, specified_path=TF_IDF_CSV_PATH, save=True)"
    ]
   },
   {
@@ -699,7 +522,7 @@
    "id": "954441d6",
    "metadata": {},
    "source": [
-    "# Basis woorden"
+    "# Basic Word Usage"
    ]
   },
   {
